[F] Fix login screen size on iPhone 5/SE

--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -44,7 +44,7 @@
 .login-panel
 {
     // Make it smaller
-    width: 300px;
+    width: 256px;
 
     // Center
     margin-left: auto;
